test_yuriiq/catalog/language/german/product/product.php
<?php

// reviews
$_['reviews_login']	= 'Sie müssen registriert sein, um kommentieren.';

// text
$_['text_error']	= 'Produkt nicht gefunden!';
$_['text_weight']	= 'Gewicht:';
$_['text_tags']	= 'Tags:';
$_['text_share']	= 'Share';
$_['text_instock']	= 'Vorrätig';
$_['text_payment_profile']	= 'Zahlungs Profile';
$_['text_write']	= 'Neue Beurteilung';
$_['text_brand']	= 'Marke';
$_['text_day']	= 'Tag';
$_['text_wait']	= 'Bitte warten!';
$_['text_reward']	= 'Belohnungspunkte:';
$_['text_model']	= 'Produktnr.:';
$_['text_month']	= 'Monat';
$_['text_week']	= 'Woche';
$_['text_payment_description']	= '%s every %d %s(s) for %d payment(s)';
$_['text_manufacturer']	= 'Marke:';
$_['text_trial_description']	= '%s every %d %s(s) for %d payment(s) then';
$_['text_points']	= 'Preis in Belohnungspunkte:';
$_['text_stock']	= 'Verfügbarkeit:';
$_['text_option']	= 'Verfügbare Optionen';
$_['text_success']	= 'Danke für Ihre Beurteilung. Sie wurde dem Webmaster zur Überprüfung übermittelt.';
$_['text_or']	= '- ODER -';
$_['text_minimum']	= '(Mindestbestellmenge %s Stück)';
$_['text_on']	= ' auf ';
$_['text_discount']	= '%s oder weitere %s';
$_['text_note']	= '<span style="color: #FF0000;">Bitte beachten:</span> Bewertungen sind ohne Pre-Moderation veröffentlicht. Seien Sie höflich, bitte!';
$_['text_year']	= 'Jahr';
$_['text_dimension']	= 'Abmessungen (L*B*H):';
$_['text_semi_month']	= 'Halb Monat';
$_['text_payment_until_canceled_description']	= '%s every %d %s(s) until canceled';
$_['text_upload']	= 'Datei erfolgreich geladen!';
$_['text_search']	= 'Suche';
$_['text_tax']	= 'Preis ohne Steuer:';
$_['text_qty']	= 'Menge:';
$_['text_reviews']	= 'Beurteilungen.';
$_['text_price']	= 'Preis:';
$_['text_no_reviews']	= 'Für dieses Produkt gibt es noch keine Beurteilungen.';

// error
$_['error_captcha']	= 'Der Code stimmt nicht mit dem Bild überein!';
$_['error_upload']	= 'Upload wird benötigt!';
$_['error_filetype']	= 'Ungültiger Dateityp!';
$_['error_name']	= 'Der Beurteilungsname muss zwischen 3 und 25 Zeichen lang sein!';
$_['error_text']	= 'Der Beurteilungstext muss zwischen 25 und 1000 Zeichen lang sein!';
$_['error_rating']	= 'Bitte eine Bewertung auswählen!';
$_['error_filename']	= 'Der Dateiname muss zwischen 3 und 128 Zeichen lang sein!';

// basic
$_['basic_attribute']	= 'Grundparameter';

// button
$_['button_edit_product']	= 'Produkt bearbeiten';

// admin
$_['admin_author']	= 'Management-Antwort';

// entry
$_['entry_rating']	= 'Bewertung:';
$_['entry_review']	= 'Meine Beurteilung:';
$_['entry_bad']	= 'Schlecht';
$_['entry_good']	= 'Gut';
$_['entry_name']	= 'Mein Name:';
$_['entry_captcha']	= 'Bitte den unten dargestellten Code einfügen:';

// tab
$_['tab_blog_related']	= 'Blog';
$_['tab_downloads']	= 'Downloads';
$_['tab_related']	= 'Ähnliche';
$_['tab_review']	= 'Beurteilungen';
$_['tab_description']	= 'Beschreibung';
$_['tab_related2']	= 'Empfehlen';
$_['tab_attribute']	= 'Spezifikation';
?>